--- a/css/index.scss
+++ b/css/index.scss
@@ -2,3 +2,4 @@
 @import './components/header.scss';
 @import './components/datascience.scss';
 @import './components/swiper.scss';
+@import './components/about.scss';
